index.css
*{
    margin: 0;
    padding: 0;
}

body{
    background-color: rgb(0, 0, 29);
    overflow-y: hidden;
}

/* Result Screen  */
.screen-cont{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 30vh;
}

.screen{
  text-align: center;
  font-size: 50px;
  height: 50%;
  width: 100%;
  font-weight: bold;
  white-space: nowrap;
  background-color: rgb(207, 207, 252);
  border: none;
  font-family: 'Times New Roman', Times, serif;
}

.screen:focus{
  outline: none;
}

.screen2{
    width: 93vw;
    height: 70%;
    border-radius: 10px;
    background-color: rgb(207, 207, 252);
    display: flex;
    align-items: center;
}

.screen::-webkit-scrollbar{
  display: none;
}

/* Numbers & Operators */
.table{
    height: 70vh;
    width: 100%;
}

.delete{
  display:flex;
  justify-content: flex-end;
}

.delete p{
  font-size: x-large;
  width: 25vw;
}

.tr{
  display: flex;
  justify-content: space-evenly;
}

p{
  width: 25vw;
  height: 13.79vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(11, 11, 55);
  color: rgb(192, 192, 252);
  font-weight: bolder;
  font-size: xx-large;
  border: solid rgb(0, 0, 29) 0.1vh;
  cursor: pointer;
}

p:hover{
  background-color: rgb(0, 0, 20);
}

.minus{
  font-size: 38px;
} 

